external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-example-api-external-ingress
spec:
  rules:
    - http:
        paths:
          - path: /express-example
            pathType: Prefix
            backend:
              service:
                name: express-example-api
                port:
                  number: 80
